fix: マークダウンのボールド表記が正しく表示されない問題を修正
- コードブロック前後の**text**が生のまま表示される問題を修正
- 全18章で問題のあった箇所を特定して修正
- ローカルビルドで確認済み（残り0件）
- 影響範囲: 00-17章 + README.md

--- a/docs-site/docs/00_はじめに.md
+++ b/docs-site/docs/00_はじめに.md
@@ -9,6 +9,7 @@
 実際、そのイメージで合っていて、
 
 飛行機が安全に着陸するためには、滑走路だけじゃなくて：
+
 - 管制塔（誰がどこに着陸していいか管理）
 - 誘導灯（どこに行けばいいか案内）
 - セキュリティゲート（危険なものは入れない）
@@ -58,6 +59,7 @@ Azure Landing Zonesも同じです。
 
 ### 4. セキュリティポリシー（約200個！）
 例えば：
+
 - 「インターネットに直接繋がるリソースは作っちゃダメ」
 - 「暗号化されてない通信は禁止」
 - 「削除保護をONにしなさい」
@@ -166,21 +168,21 @@ alz-mgmt/
 
 このコードを実行すると、Azureにこれだけのリソースができます：
 
-- **リソースグループ**: 約10個
-- **仮想ネットワーク**: 2個（東日本・西日本）
-- **Azure Firewall**: 2個
-- **Bastion Host**: 2個
-- **VPN Gateway**: 2個（オプション）
-- **Express Route Gateway**: 2個（オプション）
-- **Log Analytics ワークスペース**: 1個
-- **Automation Account**: 1個
-- **管理グループ**: 約10個
-- **ポリシー定義**: 約200個
-- **ポリシーセット定義**: 約40個
-- **ポリシー割り当て**: 約50個
-- **カスタムロール定義**: 数個
+- リソースグループ: 約10個
+- 仮想ネットワーク: 2個（東日本・西日本）
+- Azure Firewall: 2個
+- Bastion Host: 2個
+- VPN Gateway: 2個（オプション）
+- Express Route Gateway: 2個（オプション）
+- Log Analytics ワークスペース: 1個
+- Automation Account: 1個
+- 管理グループ: 約10個
+- ポリシー定義: 約200個
+- ポリシーセット定義: 約40個
+- ポリシー割り当て: 約50個
+- カスタムロール定義: 数個
 
-合計で、**500個以上のリソース**が作られます。  
+合計で、500個以上のリソースが作られます。  
 これを手作業でやったら...考えたくないですねw
 
 ## 所要時間とコスト
@@ -297,17 +299,19 @@ GitHubにpushすれば自動でデプロイ。
 
 ### 答え1
 主要な3つのコンポーネント：
+
 1. **管理グループ**: サブスクリプションを階層的に管理し、ポリシーを一括適用
 2. **ネットワーク**: Hub-and-Spoke構成でセキュアな通信基盤を構築
 3. **管理リソース**: Log Analytics、監視、セキュリティ管理
 
 ### 答え2
 Terraformを使う理由：
-- **IaC（Infrastructure as Code）**: インフラをコードで管理できる
-- **再現性**: 同じコードから何度でも同じ環境を構築できる
-- **バージョン管理**: Gitで変更履歴を追跡できる
-- **マルチクラウド対応**: Azure以外のクラウドでも使える知識
-- **モジュール化**: 再利用可能な部品として管理できる
+
+- IaC（Infrastructure as Code）: インフラをコードで管理できる
+- 再現性: 同じコードから何度でも同じ環境を構築できる
+- バージョン管理: Gitで変更履歴を追跡できる
+- マルチクラウド対応: Azure以外のクラウドでも使える知識
+- モジュール化: 再利用可能な部品として管理できる
 
 ### 答え3
 **初心者ルート**:
