--- a/docs-site/docs/01_基礎知識.md
+++ b/docs-site/docs/01_基礎知識.md
@@ -37,11 +37,12 @@
 ```
 
 でも、これって：
+
 - 間違えやすい（入力ミス）
 - 再現できない（どう作ったか忘れる）
 - 時間がかかる（10個作るなら10回やる）
 
-そこでTerraform。**コードでインフラを定義**します：
+そこでTerraform。コードでインフラを定義します：
 
 ```hcl
 resource "azurerm_virtual_machine" "example" {
@@ -54,6 +55,7 @@ resource "azurerm_virtual_machine" "example" {
 
 このコードを実行すると、VMが作られます。  
 コードなので：
+
 - バージョン管理できる（Git）
 - レビューできる
 - 再利用できる
@@ -113,6 +115,7 @@ resource "azurerm_resource_group" "example" {
 ```
 
 `terraform apply`すると：
+
 - リソースグループを削除して
 - 新しい場所に作り直す
 
@@ -257,6 +260,7 @@ Azure AD（認証の大元）
 「このプロジェクトで使うリソースは全部ここ」みたいに使います。
 
 特徴：
+
 - 同じリージョンでなくてもOK
 - まとめて削除できる
 - まとめて権限管理できる
@@ -273,6 +277,7 @@ Azureのデータセンターの場所。日本だと：
 - `japanwest`（西日本 = 大阪）
 
 リージョンによって：
+
 - 使えるサービスが違う
 - 価格が違う
 - 物理的に離れているので災害対策になる
@@ -342,26 +347,15 @@ Microsoftが定義した「企業向けAzure環境のベストプラクティス
 
 いきなりAzureでアプリを作り始めると、こんな問題が起きます：
 
-```
-❌ よくある失敗例
+### ❌ よくある失敗例
 
-1. リソースがバラバラ
-   → 「あのVMどのRGに入れたっけ？」
+1. **リソースがバラバラ** → 「あのVMどのRGに入れたっけ？」
+2. **セキュリティが甘い** → 「Public IP全開で本番デプロイしちゃった…」
+3. **コストが見えない** → 「今月の請求、なんで500万円！？」
+4. **権限がめちゃくちゃ** → 「開発者が本番環境を削除できちゃう」
+5. **監視してない** → 「障害に3日気づかなかった」
 
-2. セキュリティが甘い
-   → 「Public IP全開で本番デプロイしちゃった…」
-
-3. コストが見えない
-   → 「今月の請求、なんで500万円！？」
-
-4. 権限がめちゃくちゃ
-   → 「開発者が本番環境を削除できちゃう」
-
-5. 監視してない
-   → 「障害に3日気づかなかった」
-```
-
-Landing Zonesは、**こういう問題を最初から防ぐ仕組み**です。
+Landing Zonesは、こういう問題を最初から防ぐ仕組みです。
 
 #### 飛行機の例で理解しよう
 
@@ -419,6 +413,7 @@ ABC株式会社
 
 **よくある質問：**
 - Q: 複数テナント作れる？
+
 - A: 作れるけど、1社1テナントが基本。M&Aとかで増えることはある。
 
 #### 2. Identity and Access Management（ID・アクセス管理）
@@ -787,8 +782,7 @@ Log Analytics Workspace
 | 7. ガバナンス | YAML Policy、タグ戦略 |
 | 8. 自動化 | GitHub Actions、Terraform |
 
-つまり、このコードを使えば、  
-**Microsoftが推奨する「ちゃんとした企業向けAzure環境」が自動で作れる**ということです。
+つまり、このコードを使えば、Microsoftが推奨する「ちゃんとした企業向けAzure環境」が自動で作れるということです。
 
 ### アーキテクチャパターン：どっちを選ぶ？
 
@@ -964,6 +958,7 @@ Q3: 予算は潤沢にある？
 ```
 
 これの問題：
+
 - 人によって解釈が違う
 - 手順書が古くなる
 - ミスが起きる
