--- a/docs-site/docs/03_設定ファイル完全解説.md
+++ b/docs-site/docs/03_設定ファイル完全解説.md
@@ -3,6 +3,7 @@
 ## 8つの設計領域との対応
 
 このChapterは以下の設計領域を実装します：
+
 - ✅ **1. Azure Billing and Active Directory Tenant**（課金とテナント - リージョン設定）
 - ✅ **3. Resource Organization**（リソース整理 - リソースグループ構成）
 - ✅ **4. Network Topology and Connectivity**（ネットワーク構成 - Hub-and-Spoke/Virtual WAN設定）
@@ -462,7 +463,7 @@ secondary_private_dns_resolver_enabled = true
 | `pdr-` | Private DNS Resolver | `pdr-hub-dns-japaneast` |
 | `bas-` | Bastion Host | `bas-hub-japaneast` |
 
-**Azureの推奨命名規則に従ってる**から、そのまま使えばOK。
+Azureの推奨命名規則に従ってるから、そのまま使えばOK。
 
 ### 2-8. セカンダリリソースの名前
 
@@ -571,8 +572,8 @@ primary_firewall_client_public_ip_zones = ["1", "2", "3"]  # ←3つのゾーン
     primary_virtual_network_gateway_vpn_public_ip_name_2 = "pip-vgw-hub-vpn-$${starter_location_01}-002"
 ```
 
-**なんで2個？**
-VPN Gatewayは**Active-Active構成**（2台同時稼働）にできるから。
+なんで2個？
+VPN GatewayはActive-Active構成（2台同時稼働）にできるから。
 - 1台目：`-001`
 - 2台目：`-002`
 
@@ -580,12 +581,12 @@ VPN Gatewayは**Active-Active構成**（2台同時稼働）にできるから。
 
 ### 3-3. IPアドレスの設計（プライマリ）
 
-**📚 IPアドレスとCIDR表記について**
+📚 IPアドレスとCIDR表記について
 
 ここから`10.0.0.0/16`のような表記が出てきます。
-これは**CIDR表記**（サイダー表記）と呼ばれるIPアドレスの範囲を表す記法です。
+これはCIDR表記（サイダー表記）と呼ばれるIPアドレスの範囲を表す記法です。
 
-**CIDR表記の読み方**:
+CIDR表記の読み方:
 ```
 10.0.0.0/16
 │      │
@@ -601,7 +602,7 @@ VPN Gatewayは**Active-Active構成**（2台同時稼働）にできるから。
 - `/27`: 32個（Gateway用）
 - `/28`: 16個（DNS Resolver用）
 
-**数字が小さいほど広い範囲**です。詳しく理解する必要はありません。  
+数字が小さいほど広い範囲です。詳しく理解する必要はありません。  
 「大きな範囲を小さく区切って使う」と思えばOKです。
 
 ---
@@ -685,7 +686,7 @@ VPN Gatewayは**Active-Active構成**（2台同時稼働）にできるから。
 ```
 
 **これは何？**
-リソースグループの**フルパス**（完全なID）を作ってる。
+リソースグループのフルパス（完全なID）を作ってる。
 
 **形式**
 ```
@@ -712,7 +713,7 @@ VPN Gatewayは**Active-Active構成**（2台同時稼働）にできるから。
 ```
 
 **これは何？**
-個別のリソースの**フルパス**（Resource ID）を作ってる。
+個別のリソースのフルパス（Resource ID）を作ってる。
 
 **形式**
 ```
@@ -737,6 +738,7 @@ VPN Gatewayは**Active-Active構成**（2台同時稼働）にできるから。
 ✅ リソース識別子（Part 5）
 
 **今から学ぶこと**：
+
 - タグ設定（コスト管理、管理用）
 - 管理リソース（Log Analytics等）
 - 管理グループとポリシー
@@ -808,6 +810,7 @@ management_resource_settings = {
 Log Analyticsなど、監視系のリソースをまとめて設定しています。
 
 **enabled = true** にすると：
+
 - Log Analytics Workspace作られる
 - Data Collection Rule（DCR）3種類作られる
 - Managed Identity作られる
@@ -1119,7 +1122,7 @@ Firewallには2つのPublic IPが必要：
     }
 ```
 
-VPN Gatewayは**Active-Active**（2台構成）になってる。
+VPN GatewayはActive-Active（2台構成）になってる。
 ExpressRouteは1台だけ。
 
 #### Bastion設定
@@ -1156,6 +1159,7 @@ Japan EastはAvailability Zonesに対応していないため`[]`に設定して
 3. **実際のリソース設定**（各セクション）
 
 **覚えておくべきポイント**：
+
 - リージョンは`starter_locations`で決まります
 - 有効/無効は`xxx_enabled = true/false`で設定します
 - Japan Eastは`zones = []`が必須です
