--- a/docs-site/docs/04_変数定義.md
+++ b/docs-site/docs/04_変数定義.md
@@ -5,6 +5,7 @@
 Chapter 3で見た`platform-landing-zone.auto.tfvars`（設定ファイル）の「型定義」を解説する。
 
 **例えるなら**：
+
 - `platform-landing-zone.auto.tfvars`：注文内容（「ラーメン1つ、餃子2つ」）
 - `variables.tf`：メニュー（「ラーメンは文字列、餃子は数値」）
 
@@ -99,7 +100,9 @@ validation {
 ```
 
 **チェック内容**：
+
 - `length(var.starter_locations) > 0`：リストの長さが0より大きい？
+
 - つまり、最低1個は入ってないとダメ
 
 **エラー例**：
@@ -119,6 +122,7 @@ validation {
 ```
 
 **意味**：
+
 - Hub VNetを2個作るなら、リージョンも2個指定してね
 - Hub VNet 3個なのにリージョン2個だと足りないからエラー
 
@@ -156,6 +160,7 @@ DESCRIPTION
 リージョンの短縮コードを手動で指定したい時に使う。
 
 **デフォルト動作**：
+
 - `japaneast` → `jpe`（自動生成）
 - `japanwest` → `jpw`（自動生成）
 
@@ -216,7 +221,9 @@ validation {
 ```
 
 **チェック内容**：
+
 - サブスクリプションIDが正しいGUID形式か？
+
 - `xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx`の形式
 
 **NG例**：
@@ -263,7 +270,7 @@ variable "subscription_id_connectivity" {
 }
 ```
 
-**DEPRECATED**って書いてあるでしょ？
+DEPRECATEDって書いてあるでしょ？
 これは古い方式。使わないで。
 
 昔はこう書いてた：
@@ -383,7 +390,8 @@ custom_replacements = {
 }
 ```
 
-**optional**って何？
+optionalって何？
+
 - `optional(map(string), {})`：省略可能。省略したら空マップ`{}`になる
 
 つまり、これでもOK：
@@ -642,16 +650,18 @@ resource "azurerm_firewall" "example" {
 3. **デフォルト値**：省略時の初期値
 
 **よく使う型**：
+
 - `string`、`number`、`bool`：基本型
 - `list(type)`、`map(type)`：コレクション型
 - `object({...})`：構造型
 - `optional(type, default)`：省略可能
 
 **バリデーション**：
+
 - `length()`、`can()`、`regex()`、`contains()`、`alltrue()`
 
 次のChapterでは、`locals.tf`を見ていきます。
-変数を**計算・加工**するロジックがどうなっているか解説します。
+変数を計算・加工するロジックがどうなっているか解説します。
 
 ---
 
