--- a/docs-site/docs/05_ローカル変数.md
+++ b/docs-site/docs/05_ローカル変数.md
@@ -5,6 +5,7 @@
 `locals.tf`の役割を理解する。
 
 **例えるなら**：
+
 - `variables.tf`：材料（卵、砂糖、小麦粉）
 - `locals.tf`：下ごしらえ（卵を溶く、材料を混ぜる）
 - `main.tf`：調理（オーブンで焼く）
@@ -33,6 +34,7 @@ resource "azurerm_resource_group" "example" {
 ```
 
 **ポイント**：
+
 - 定義：`locals { ... }`（複数形）
 - 参照：`local.xxx`（単数形）
 
@@ -148,9 +150,9 @@ resource "azurerm_resource_group" "main" {
 ```
 
 **覚え方**:
-- **variables**: 入力（ユーザーが決める）
-- **locals**: 処理（自動で計算）
-- **resources**: 出力（実際に作る）
+- variables: 入力（ユーザーが決める）
+- locals: 処理（自動で計算）
+- resources: 出力（実際に作る）
 
 ---
 
@@ -187,6 +189,7 @@ if (var.connectivity_type == local.const.connectivity.hub_and_spoke_vnet) {
 ```
 
 **定義されてる定数**：
+
 - `virtual_wan`：Virtual WAN使う
 - `hub_and_spoke_vnet`：Hub-and-Spoke使う
 - `none`：ネットワーク作らない
@@ -329,7 +332,7 @@ resource "azurerm_virtual_network" "hub" {
 }
 ```
 
-でも、モジュール使ってる場合は**明示的に依存関係を書く**必要がある。
+でも、モジュール使ってる場合は明示的に依存関係を書く必要がある。
 
 ### resource_groups
 
@@ -369,6 +372,7 @@ hub_and_spoke_networks_settings = {
 ```
 
 **効果**：
+
 - `resource_groups`を含めることで、Terraformが自動で依存関係を理解する
 - リソースグループ → ネットワークの順番で作られる
 
@@ -378,7 +382,7 @@ hub_and_spoke_networks_settings = {
 hub_virtual_networks = (merge({ vnets = module.config.outputs.hub_virtual_networks }, local.resource_groups)).vnets
 ```
 
-**ちょっと複雑**だから分解しよう。
+ちょっと複雑だから分解しよう。
 
 #### ステップ1: mergeする
 ```hcl
@@ -430,7 +434,7 @@ locals {
 ```
 
 **これは何？**
-管理グループにポリシーを割り当てる前に、**他のリソースを先に作る**ための仕組み。
+管理グループにポリシーを割り当てる前に、他のリソースを先に作るための仕組み。
 
 ### なんで必要なの？
 
@@ -516,7 +520,7 @@ locals {
 }
 ```
 
-**coalesce関数**って何？
+coalesce関数って何？
 
 ```hcl
 coalesce(値1, 値2, 値3, ...)
@@ -538,6 +542,7 @@ tags = coalesce(
 ```
 
 **意味**：
+
 - 管理リソース専用のタグがあればそれを使う
 - なければ全体のタグを使う
 
@@ -778,6 +783,7 @@ Outputs:
 5. **デフォルト値**：フォールバック処理
 
 **覚えておくこと**：
+
 - 定義：`locals { ... }`（複数形）
 - 参照：`local.xxx`（単数形）
 - 外部から値を渡せない（内部計算専用）
@@ -841,7 +847,7 @@ rg-prod-japaneast
 - 同じ計算を繰り返し使う時（DRY原則）
 
 ### 答え3
-**三項演算子**を使って、環境が本番（prod）かどうかを判定しています。
+三項演算子を使って、環境が本番（prod）かどうかを判定しています。
 
 ```
 var.environment == "prod" ? true : false
@@ -856,7 +862,7 @@ var.environment == "prod" ? true : false
 
 ---
 
-**次のChapter**で、`modules/config-templating/`を見ていきます。
+次のChapterで、`modules/config-templating/`を見ていきます。
 変数を実際のリソース設定に変換するモジュールがどう動いてるか解説するね。
 
 ---
