--- a/docs-site/docs/07_リソースグループ.md
+++ b/docs-site/docs/07_リソースグループ.md
@@ -9,6 +9,7 @@ Azureリソースを入れる「箱」みたいなもん。
 VMとかVNetとか、全てのリソースは必ずどこかのリソースグループに属する。
 
 **例えるなら**：
+
 - **リソースグループ**：本棚
 - **リソース**：本
 - 本棚がないと本を置けないでしょ？
@@ -256,7 +257,7 @@ https://registry.terraform.io/modules/Azure/avm-res-resources-resourcegroup/azur
 for_each = { for key, value in module.config.outputs.connectivity_resource_groups : key => value if try(value.settings.enabled, true) }
 ```
 
-**複雑！**分解しよう。
+複雑！分解しよう。
 
 #### 基本構造
 
@@ -284,6 +285,7 @@ try(value.settings.enabled, true)
 ```
 
 **意味**：
+
 - `value.settings.enabled`が存在すればその値
 - 存在しなければ`true`
 
@@ -428,6 +430,7 @@ module.resource_groups["primary"].resource_group_id
 ```
 
 **出力される情報**：
+
 - `resource_group_id`：リソースグループのID
 - `name`：名前
 - `location`：場所
@@ -443,6 +446,7 @@ resource "azurerm_virtual_network" "hub" {
 ```
 
 **効果**：
+
 - リソースグループ → VNetの順番で作られる（依存関係）
 
 ---
@@ -696,7 +700,7 @@ connectivity_resource_groups = {
 }
 ```
 
-**リージョン × 機能**で分ける。わかりやすい。
+リージョン × 機能で分ける。わかりやすい。
 
 ---
 
@@ -709,6 +713,7 @@ connectivity_resource_groups = {
 4. **タグ付け**：コスト管理、検索
 
 **覚えておくこと**：
+
 - `for_each`でマップを展開
 - `try(value.settings.enabled, true)`で有効/無効制御
 - タグはフォールバック（個別 → 全体）
