--- a/docs-site/docs/09_管理リソース.md
+++ b/docs-site/docs/09_管理リソース.md
@@ -3,6 +3,7 @@
 ## 8つの設計領域との対応
 
 このChapterは以下の設計領域を実装します：
+
 - ✅ **6. Management and Monitoring**（管理と監視 - Log Analytics、DCR）
 - ✅ **5. Security**（セキュリティ - セキュリティ監視）
 - ✅ **2. Identity and Access Management**（ID管理 - Managed Identity）
@@ -24,6 +25,7 @@
 3. **Managed Identity**：自動化用のID
 
 **例えるなら**：
+
 - **Log Analytics**：図書館（本を保管）
 - **DCR**：司書（どの本をどう整理するか）
 - **Managed Identity**：図書館カード（本を借りる権限）
@@ -155,6 +157,7 @@ log_analytics_workspace_name = "law-management-japaneast"
 **何？**：Log Analyticsワークスペースの名前
 
 **命名規則**：
+
 - `law-`：Log Analytics Workspaceの略
 - `management`：用途
 - `japaneast`：場所
@@ -167,6 +170,7 @@ resource_group_name = "rg-management"
 **何？**：管理リソース用のリソースグループ名
 
 このRGの中に全部入れる：
+
 - Log Analytics Workspace
 - Data Collection Rules
 - Managed Identity
@@ -217,8 +221,11 @@ data_collection_rules = {
 ```
 
 **使い道**：
+
 - 誰かがファイル削除した？
+
 - 設定変更された？
+
 - 不審なプログラムインストールされた？
 
 ##### 2. defender_sql
@@ -227,6 +234,7 @@ data_collection_rules = {
 ```
 
 **使い道**：
+
 - 不正アクセス検知
 - 脆弱性スキャン
 - コンプライアンス監査
@@ -237,6 +245,7 @@ data_collection_rules = {
 ```
 
 **使い道**：
+
 - CPU使用率
 - メモリ使用率
 - ディスクI/O
@@ -307,7 +316,7 @@ module "management_resources" {
 }
 ```
 
-**Azure公式モジュール**を使ってる。
+Azure公式モジュールを使ってる。
 
 #### coalesce
 ```hcl
@@ -393,7 +402,7 @@ AzureDiagnostics
 | summarize count() by Resource
 ```
 
-**KQL（Kusto Query Language）**でクエリ書ける。めっちゃ強力。
+KQL（Kusto Query Language）でクエリ書ける。めっちゃ強力。
 
 **3. アラート作成**
 ```
@@ -437,7 +446,7 @@ log_analytics_workspace_daily_quota_gb = 10
 ```
 
 **注意**：
-クォータに達すると**ログが取り込まれない**から、重要なログが欠損する可能性あり。
+クォータに達するとログが取り込まれないから、重要なログが欠損する可能性あり。
 
 ##### sku
 ```hcl
@@ -470,6 +479,7 @@ CapacityReservation：100GB/日から（割引率あり）
 
 ```
 収集するデータ：
+
 - ファイルの変更
 - レジストリの変更
 - Windowsサービスの変更
@@ -489,6 +499,7 @@ ConfigurationChange
 
 ```
 収集するデータ：
+
 - SQL Serverのセキュリティイベント
 - 脆弱性スキャン結果
 - 脅威検出アラート
@@ -507,6 +518,7 @@ SecurityAlert
 
 ```
 収集するデータ：
+
 - パフォーマンスカウンター（CPU、メモリ、ディスク、ネットワーク）
 - プロセス情報
 - ネットワーク接続
@@ -537,6 +549,7 @@ VMにエージェントインストール
   password: P@ssw0rd123
   ↓
 問題：
+
 - パスワード漏洩リスク
 - ローテーション面倒
 - 設定ファイルに平文で書くのは危険
@@ -568,7 +581,7 @@ VMを削除 → Managed Identityも削除
 VMを削除してもManaged Identityは残る
 ```
 
-**このプロジェクトではUser-assigned**を使ってる。
+このプロジェクトではUser-assignedを使ってる。
 
 #### 使われ方
 
@@ -663,6 +676,7 @@ user_assigned_managed_identities = {
 ```
 
 **使い分け**：
+
 - `ama`：Azure Monitor Agent用
 - `automation`：自動化スクリプト用
 - `backup`：バックアップ処理用
@@ -880,6 +894,7 @@ log_analytics_workspace_daily_quota_gb = 10
 3. **Managed Identity**：パスワード不要の認証
 
 **覚えておくこと**：
+
 - Log Analyticsは全ての監視の基盤
 - DCRでログ収集をカスタマイズ
 - Managed Identityでセキュアな認証
