--- a/docs-site/docs/13_デプロイ手順.md
+++ b/docs-site/docs/13_デプロイ手順.md
@@ -320,7 +320,7 @@ Thumbs.db
 
 ### Step 2-3: 設定ファイル編集
 
-**platform-landing-zone.auto.tfvars** を自分の環境に合わせて編集：
+platform-landing-zone.auto.tfvars を自分の環境に合わせて編集：
 
 ```hcl
 # 最小限の設定例
@@ -371,6 +371,7 @@ az account list --output table
 ```
 
 3つのSubscriptionが必要（同じでもOK）：
+
 - Management：管理用
 - Identity：ID管理用（AD DS等）
 - Connectivity：ネットワーク用
@@ -445,10 +446,12 @@ apply実行
 **なぜローカルで？**
 ```
 GitHub Actionsでいきなりやると：
+
 - エラー時のデバッグが大変
 - ログ見るのが面倒
 
 ローカルで：
+
 - すぐエラーわかる
 - 設定ファイル調整しやすい
 ```
@@ -738,7 +741,7 @@ git push origin feature/cleanup-test
 git checkout -b feature/enable-production-resources
 ```
 
-**platform-landing-zone.auto.tfvars** 編集：
+platform-landing-zone.auto.tfvars 編集：
 
 ```hcl
 # Firewall有効化
@@ -860,7 +863,7 @@ az account management-group show \
   --recurse
 ```
 
-**階層構造**が表示される。
+階層構造が表示される。
 
 ### Step 6-2: Policy確認
 
@@ -1173,11 +1176,12 @@ Phase 6: 20分
 ```
 
 **重要ポイント**：
-- **Service Principal**: OIDC設定必須
-- **Storage Account**: State保存先
-- **ローカル実行**: 最初はローカルで確認
-- **段階的デプロイ**: いきなり全部有効化しない
-- **コスト確認**: Firewall等を有効化する前に確認
+
+- Service Principal: OIDC設定必須
+- Storage Account: State保存先
+- ローカル実行: 最初はローカルで確認
+- 段階的デプロイ: いきなり全部有効化しない
+- コスト確認: Firewall等を有効化する前に確認
 
 ---
 
