--- a/docs/01_基礎知識.md
+++ b/docs/01_基礎知識.md
@@ -42,7 +42,7 @@
 - 再現できない（どう作ったか忘れる）
 - 時間がかかる（10個作るなら10回やる）
 
-そこでTerraform。**コードでインフラを定義**します：
+そこでTerraform。コードでインフラを定義します：
 
 ```hcl
 resource "azurerm_virtual_machine" "example" {
@@ -782,8 +782,7 @@ Log Analytics Workspace
 | 7. ガバナンス | YAML Policy、タグ戦略 |
 | 8. 自動化 | GitHub Actions、Terraform |
 
-つまり、このコードを使えば、  
-**Microsoftが推奨する「ちゃんとした企業向けAzure環境」が自動で作れる**ということです。
+つまり、このコードを使えば、Microsoftが推奨する「ちゃんとした企業向けAzure環境」が自動で作れるということです。
 
 ### アーキテクチャパターン：どっちを選ぶ？
 
