--- a/docs/04_変数定義.md
+++ b/docs/04_変数定義.md
@@ -270,7 +270,7 @@ variable "subscription_id_connectivity" {
 }
 ```
 
-**DEPRECATED**って書いてあるでしょ？
+DEPRECATEDって書いてあるでしょ？
 これは古い方式。使わないで。
 
 昔はこう書いてた：
@@ -390,7 +390,7 @@ custom_replacements = {
 }
 ```
 
-**optional**って何？
+optionalって何？
 
 - `optional(map(string), {})`：省略可能。省略したら空マップ`{}`になる
 
@@ -661,7 +661,7 @@ resource "azurerm_firewall" "example" {
 - `length()`、`can()`、`regex()`、`contains()`、`alltrue()`
 
 次のChapterでは、`locals.tf`を見ていきます。
-変数を**計算・加工**するロジックがどうなっているか解説します。
+変数を計算・加工するロジックがどうなっているか解説します。
 
 ---
 
