--- a/docs/06_設定テンプレート.md
+++ b/docs/06_設定テンプレート.md
@@ -198,7 +198,7 @@ locals {
 }
 ```
 
-**複雑！**分解して見よう。
+複雑！分解して見よう。
 
 ##### coalesceで優先順位付け
 
@@ -361,9 +361,9 @@ result = jsondecode(replaced)
 ```
 
 **初心者向けまとめ**:
-- **jsonencode()**: オブジェクト → JSON文字列（文字列操作可能にする）
-- **jsondecode()**: JSON文字列 → オブジェクト（Terraformで使える形に戻す）
-- **理由**: Terraformのオブジェクトは直接文字列操作できないため
+- jsonencode(): オブジェクト → JSON文字列（文字列操作可能にする）
+- jsondecode(): JSON文字列 → オブジェクト（Terraformで使える形に戻す）
+- 理由: Terraformのオブジェクトは直接文字列操作できないため
 
 ---
 
@@ -462,7 +462,7 @@ locals {
 
 **違い**：
 `local.custom_name_replacements`を使ってテンプレート処理。
-つまり、リソースグループIDの中で**リソース名を参照できる**。
+つまり、リソースグループIDの中でリソース名を参照できる。
 
 **例**：
 ```hcl
