--- a/docs/07_リソースグループ.md
+++ b/docs/07_リソースグループ.md
@@ -257,7 +257,7 @@ https://registry.terraform.io/modules/Azure/avm-res-resources-resourcegroup/azur
 for_each = { for key, value in module.config.outputs.connectivity_resource_groups : key => value if try(value.settings.enabled, true) }
 ```
 
-**複雑！**分解しよう。
+複雑！分解しよう。
 
 #### 基本構造
 
@@ -700,7 +700,7 @@ connectivity_resource_groups = {
 }
 ```
 
-**リージョン × 機能**で分ける。わかりやすい。
+リージョン × 機能で分ける。わかりやすい。
 
 ---
 
