--- a/docs/08_管理グループとポリシー.md
+++ b/docs/08_管理グループとポリシー.md
@@ -280,7 +280,7 @@ alz
 
 ### アーキタイプって何？
 
-**ポリシーのテンプレート**みたいなもん。
+ポリシーのテンプレートみたいなもん。
 
 **例**：
 
@@ -533,7 +533,7 @@ module "management_groups" {
 }
 ```
 
-**Azure公式モジュール**を使ってる。
+Azure公式モジュールを使ってる。
 
 **URL**：
 https://registry.terraform.io/modules/Azure/avm-ptn-alz/azurerm
