--- a/docs/09_管理リソース.md
+++ b/docs/09_管理リソース.md
@@ -316,7 +316,7 @@ module "management_resources" {
 }
 ```
 
-**Azure公式モジュール**を使ってる。
+Azure公式モジュールを使ってる。
 
 #### coalesce
 ```hcl
@@ -402,7 +402,7 @@ AzureDiagnostics
 | summarize count() by Resource
 ```
 
-**KQL（Kusto Query Language）**でクエリ書ける。めっちゃ強力。
+KQL（Kusto Query Language）でクエリ書ける。めっちゃ強力。
 
 **3. アラート作成**
 ```
@@ -446,7 +446,7 @@ log_analytics_workspace_daily_quota_gb = 10
 ```
 
 **注意**：
-クォータに達すると**ログが取り込まれない**から、重要なログが欠損する可能性あり。
+クォータに達するとログが取り込まれないから、重要なログが欠損する可能性あり。
 
 ##### sku
 ```hcl
@@ -581,7 +581,7 @@ VMを削除 → Managed Identityも削除
 VMを削除してもManaged Identityは残る
 ```
 
-**このプロジェクトではUser-assigned**を使ってる。
+このプロジェクトではUser-assignedを使ってる。
 
 #### 使われ方
 
