--- a/docs/13_デプロイ手順.md
+++ b/docs/13_デプロイ手順.md
@@ -320,7 +320,7 @@ Thumbs.db
 
 ### Step 2-3: 設定ファイル編集
 
-**platform-landing-zone.auto.tfvars** を自分の環境に合わせて編集：
+platform-landing-zone.auto.tfvars を自分の環境に合わせて編集：
 
 ```hcl
 # 最小限の設定例
@@ -741,7 +741,7 @@ git push origin feature/cleanup-test
 git checkout -b feature/enable-production-resources
 ```
 
-**platform-landing-zone.auto.tfvars** 編集：
+platform-landing-zone.auto.tfvars 編集：
 
 ```hcl
 # Firewall有効化
@@ -863,7 +863,7 @@ az account management-group show \
   --recurse
 ```
 
-**階層構造**が表示される。
+階層構造が表示される。
 
 ### Step 6-2: Policy確認
 
@@ -1177,11 +1177,11 @@ Phase 6: 20分
 
 **重要ポイント**：
 
-- **Service Principal**: OIDC設定必須
-- **Storage Account**: State保存先
-- **ローカル実行**: 最初はローカルで確認
-- **段階的デプロイ**: いきなり全部有効化しない
-- **コスト確認**: Firewall等を有効化する前に確認
+- Service Principal: OIDC設定必須
+- Storage Account: State保存先
+- ローカル実行: 最初はローカルで確認
+- 段階的デプロイ: いきなり全部有効化しない
+- コスト確認: Firewall等を有効化する前に確認
 
 ---
 
