--- a/docs-site/docs/06_設定テンプレート.md
+++ b/docs-site/docs/06_設定テンプレート.md
@@ -5,6 +5,7 @@
 `modules/config-templating/`モジュールの仕組みを理解しよう。
 
 **例えるなら**：
+
 - **Mad Libs**（穴埋めゲーム）みたいなやつ
 - テンプレート：「今日の天気は`{{weather}}`だよ」
 - 変数：`weather = "晴れ"`
@@ -106,6 +107,7 @@ module "regions" {
 Azureの全リージョン情報を取得しています。
 
 **取得できる情報**：
+
 - `geo_code`：地理コード（例：`jp`、`us`）
 - `short_name`：短縮名（例：`jpe`、`jpw`）
 - `display_name`：表示名（例：`Japan East`）
@@ -129,6 +131,7 @@ data "azurerm_client_config" "current" {}
 現在のAzure接続情報を取得しています。
 
 **取得できる情報**：
+
 - `tenant_id`：テナントID
 - `subscription_id`：サブスクリプションID
 
@@ -165,6 +168,7 @@ local.starter_locations = {
 ```
 
 **format("%02d", i + 1)**：
+
 - `%02d`：2桁の数字、足りなければ0埋め
 - `i + 1`：0始まりを1始まりに変換
 
@@ -194,7 +198,7 @@ locals {
 }
 ```
 
-**複雑！**分解して見よう。
+複雑！分解して見よう。
 
 ##### coalesceで優先順位付け
 
@@ -357,9 +361,9 @@ result = jsondecode(replaced)
 ```
 
 **初心者向けまとめ**:
-- **jsonencode()**: オブジェクト → JSON文字列（文字列操作可能にする）
-- **jsondecode()**: JSON文字列 → オブジェクト（Terraformで使える形に戻す）
-- **理由**: Terraformのオブジェクトは直接文字列操作できないため
+- jsonencode(): オブジェクト → JSON文字列（文字列操作可能にする）
+- jsondecode(): JSON文字列 → オブジェクト（Terraformで使える形に戻す）
+- 理由: Terraformのオブジェクトは直接文字列操作できないため
 
 ---
 
@@ -458,7 +462,7 @@ locals {
 
 **違い**：
 `local.custom_name_replacements`を使ってテンプレート処理。
-つまり、リソースグループIDの中で**リソース名を参照できる**。
+つまり、リソースグループIDの中でリソース名を参照できる。
 
 **例**：
 ```hcl
@@ -585,6 +589,7 @@ starter_locations → starter_locations_short → built_in_replacements
 ```
 
 **結果**：
+
 - `starter_location_01`、`starter_location_01_short`
 - `subscription_id_xxx`
 - `root_parent_management_group_id`
@@ -605,6 +610,7 @@ custom_resource_identifiers → final_replacements
 ```
 
 **ポイント**：
+
 - **段階的に処理**：名前 → リソースグループID → リソースID
 - **前のステップの結果を次で使う**：名前がRG IDの中で使える
 
@@ -770,6 +776,7 @@ vnet_id = "{{rg_id}}/providers/.../virtualNetworks/vnet"
 5. **ブール値の保護**：`true`/`false`が文字列にならないように
 
 **覚えておくこと**：
+
 - `templatestring()`：`{{xxx}}`を置換
 - `jsonencode()`/`jsondecode()`：オブジェクト ⇔ JSON文字列
 - `coalesce()`：最初のnullじゃない値
