--- a/docs/00_はじめに.md
+++ b/docs/00_はじめに.md
@@ -168,21 +168,21 @@ alz-mgmt/
 
 このコードを実行すると、Azureにこれだけのリソースができます：
 
-- **リソースグループ**: 約10個
-- **仮想ネットワーク**: 2個（東日本・西日本）
-- **Azure Firewall**: 2個
-- **Bastion Host**: 2個
-- **VPN Gateway**: 2個（オプション）
-- **Express Route Gateway**: 2個（オプション）
-- **Log Analytics ワークスペース**: 1個
-- **Automation Account**: 1個
-- **管理グループ**: 約10個
-- **ポリシー定義**: 約200個
-- **ポリシーセット定義**: 約40個
-- **ポリシー割り当て**: 約50個
-- **カスタムロール定義**: 数個
+- リソースグループ: 約10個
+- 仮想ネットワーク: 2個（東日本・西日本）
+- Azure Firewall: 2個
+- Bastion Host: 2個
+- VPN Gateway: 2個（オプション）
+- Express Route Gateway: 2個（オプション）
+- Log Analytics ワークスペース: 1個
+- Automation Account: 1個
+- 管理グループ: 約10個
+- ポリシー定義: 約200個
+- ポリシーセット定義: 約40個
+- ポリシー割り当て: 約50個
+- カスタムロール定義: 数個
 
-合計で、**500個以上のリソース**が作られます。  
+合計で、500個以上のリソースが作られます。  
 これを手作業でやったら...考えたくないですねw
 
 ## 所要時間とコスト
@@ -307,11 +307,11 @@ GitHubにpushすれば自動でデプロイ。
 ### 答え2
 Terraformを使う理由：
 
-- **IaC（Infrastructure as Code）**: インフラをコードで管理できる
-- **再現性**: 同じコードから何度でも同じ環境を構築できる
-- **バージョン管理**: Gitで変更履歴を追跡できる
-- **マルチクラウド対応**: Azure以外のクラウドでも使える知識
-- **モジュール化**: 再利用可能な部品として管理できる
+- IaC（Infrastructure as Code）: インフラをコードで管理できる
+- 再現性: 同じコードから何度でも同じ環境を構築できる
+- バージョン管理: Gitで変更履歴を追跡できる
+- マルチクラウド対応: Azure以外のクラウドでも使える知識
+- モジュール化: 再利用可能な部品として管理できる
 
 ### 答え3
 **初心者ルート**:
