--- a/docs/02_プロジェクト構造.md
+++ b/docs/02_プロジェクト構造.md
@@ -58,10 +58,10 @@ alz-mgmt/
 
 全体で：
 
-- **Terraformファイル**: 約20個
-- **モジュール内ファイル**: 約10個
-- **YAMLファイル**: 約10個
-- **総コード行数**: 約3,000行
+- Terraformファイル: 約20個
+- モジュール内ファイル: 約10個
+- YAMLファイル: 約10個
+- 総コード行数: 約3,000行
 
 一見多そうですが、実は整理されています。
 
@@ -250,7 +250,7 @@ GitHub Actionsでこの指定をやってます。
 
 ### 変数定義ファイルの役割
 
-Terraformの変数には**型**があります。
+Terraformの変数には型があります。
 
 ```hcl
 # variables.tf
@@ -825,7 +825,8 @@ outputs.tf（結果出力）
 `.auto.tfvars`ファイルは、Terraformが自動的に読み込むファイルです。普通の`.tfvars`ファイルは`-var-file`オプションで明示的に指定しないと読み込まれません。`.auto.tfvars`を使うと、`terraform apply`だけで自動的に設定が適用されるので便利です。
 
 ### 答え2
-**variables.tf**は外部から渡される変数を定義します（入力パラメータ）。**locals.tf**は内部で計算される変数を定義します（計算結果）。
+
+variables.tfは外部から渡される変数を定義します（入力パラメータ）。locals.tfは内部で計算される変数を定義します（計算結果）。
 
 例：
 
@@ -839,9 +840,9 @@ outputs.tf（結果出力）
 2. **保守性の向上**: 変更したい機能のファイルだけを開けばよく、数千行のファイルを探し回る必要がない
 
 ### 答え4
-**count**は数値でリソースを作ります（`count = 3`なら3個）。インデックスは`count.index`で0,1,2...
+countは数値でリソースを作ります（`count = 3`なら3個）。インデックスは`count.index`で0,1,2...
 
-**for_each**はマップやセットでリソースを作ります。各要素に名前があり、`each.key`や`each.value`でアクセスできます。
+for_eachはマップやセットでリソースを作ります。各要素に名前があり、`each.key`や`each.value`でアクセスできます。
 
 例：
 ```hcl
@@ -852,7 +853,7 @@ count = 2
 for_each = toset(["app1", "app2"])
 ```
 
-**for_each**のほうが、リソースの追加・削除時に他のリソースに影響しないため推奨されます。
+for_eachのほうが、リソースの追加・削除時に他のリソースに影響しないため推奨されます。
 
 ---
 
