--- a/docs/03_設定ファイル完全解説.md
+++ b/docs/03_設定ファイル完全解説.md
@@ -463,7 +463,7 @@ secondary_private_dns_resolver_enabled = true
 | `pdr-` | Private DNS Resolver | `pdr-hub-dns-japaneast` |
 | `bas-` | Bastion Host | `bas-hub-japaneast` |
 
-**Azureの推奨命名規則に従ってる**から、そのまま使えばOK。
+Azureの推奨命名規則に従ってるから、そのまま使えばOK。
 
 ### 2-8. セカンダリリソースの名前
 
@@ -572,8 +572,8 @@ primary_firewall_client_public_ip_zones = ["1", "2", "3"]  # ←3つのゾーン
     primary_virtual_network_gateway_vpn_public_ip_name_2 = "pip-vgw-hub-vpn-$${starter_location_01}-002"
 ```
 
-**なんで2個？**
-VPN Gatewayは**Active-Active構成**（2台同時稼働）にできるから。
+なんで2個？
+VPN GatewayはActive-Active構成（2台同時稼働）にできるから。
 - 1台目：`-001`
 - 2台目：`-002`
 
@@ -581,12 +581,12 @@ VPN Gatewayは**Active-Active構成**（2台同時稼働）にできるから。
 
 ### 3-3. IPアドレスの設計（プライマリ）
 
-**📚 IPアドレスとCIDR表記について**
+📚 IPアドレスとCIDR表記について
 
 ここから`10.0.0.0/16`のような表記が出てきます。
-これは**CIDR表記**（サイダー表記）と呼ばれるIPアドレスの範囲を表す記法です。
+これはCIDR表記（サイダー表記）と呼ばれるIPアドレスの範囲を表す記法です。
 
-**CIDR表記の読み方**:
+CIDR表記の読み方:
 ```
 10.0.0.0/16
 │      │
@@ -602,7 +602,7 @@ VPN Gatewayは**Active-Active構成**（2台同時稼働）にできるから。
 - `/27`: 32個（Gateway用）
 - `/28`: 16個（DNS Resolver用）
 
-**数字が小さいほど広い範囲**です。詳しく理解する必要はありません。  
+数字が小さいほど広い範囲です。詳しく理解する必要はありません。  
 「大きな範囲を小さく区切って使う」と思えばOKです。
 
 ---
@@ -686,7 +686,7 @@ VPN Gatewayは**Active-Active構成**（2台同時稼働）にできるから。
 ```
 
 **これは何？**
-リソースグループの**フルパス**（完全なID）を作ってる。
+リソースグループのフルパス（完全なID）を作ってる。
 
 **形式**
 ```
@@ -713,7 +713,7 @@ VPN Gatewayは**Active-Active構成**（2台同時稼働）にできるから。
 ```
 
 **これは何？**
-個別のリソースの**フルパス**（Resource ID）を作ってる。
+個別のリソースのフルパス（Resource ID）を作ってる。
 
 **形式**
 ```
@@ -1122,7 +1122,7 @@ Firewallには2つのPublic IPが必要：
     }
 ```
 
-VPN Gatewayは**Active-Active**（2台構成）になってる。
+VPN GatewayはActive-Active（2台構成）になってる。
 ExpressRouteは1台だけ。
 
 #### Bastion設定
