--- a/docs/00_はじめに.md
+++ b/docs/00_はじめに.md
@@ -1,5 +1,52 @@
 # 00. はじめに - このプロジェクトの全体像
 
+## この教科書の使い方
+
+### 📚 学習スタイル
+
+この教科書は、**実際のコードを見ながら読む**ことを強く推奨します。
+
+**パターン1: GitHubで見る**（一番簡単）
+
+教科書を読みながら、ブラウザで https://github.com/shuhei0720org01/alz-mgmt を開いておく。
+
+- ファイル構造が見える
+- コードを検索できる
+- ファイルをクリックすれば開ける
+
+**パターン2: クローンしてVSCodeで見る**（本格的に学びたい人向け）
+
+```bash
+git clone https://github.com/shuhei0720org01/alz-mgmt.git
+cd alz-mgmt
+code .
+```
+
+- ファイル間の移動が速い
+- 複数ファイルを同時に開ける
+- `terraform plan`で動作確認できる
+
+### 📖 読み方
+
+1. **教科書を読む**
+   - Webサイトまたは`docs/`フォルダのマークダウン
+   
+2. **コードを確認する**
+   - 教科書で具体的なファイル名（`platform-landing-zone.auto.tfvars`など）が出てきたら、GitHubまたはVSCodeでそのファイルを開く
+   
+3. **手を動かす**（できれば）
+   - クローンした場合は、コメントを追加したり変更してみる
+   - `terraform plan`で何が起きるか確認する（デプロイはしなくてもOK）
+
+### ⚠️ 注意
+
+このリポジトリを実際にデプロイすると、Azureに課金が発生します。  
+学習目的なら、**コードを読むだけでも十分効果があります**。
+
+デプロイしたい場合は、[13_デプロイ手順.md](./13_デプロイ手順.md)を必ず読んでから実行してください。
+
+---
+
 ## 何を作るのか？
 
 このプロジェクトは、**Azure Landing Zones**（アジュール・ランディングゾーンズ）という、  
