docs: 00_はじめに.mdにデザイン装飾を追加
- タブ形式で学習スタイルを表示（GitHub/VSCode）
- warning admonitionで注意事項を強調
- コードブロックにタイトル追加
- 2拠点構成をタブ形式で表示

--- a/docs-site/docs/00_はじめに.md
+++ b/docs-site/docs/00_はじめに.md
@@ -6,25 +6,25 @@
 
 この教科書は、**実際のコードを見ながら読む**ことを強く推奨します。
 
-**パターン1: GitHubで見る**（一番簡単）
+=== "GitHubで見る（一番簡単）"
 
-教科書を読みながら、ブラウザで https://github.com/shuhei0720org01/alz-mgmt を開いておく。
+    教科書を読みながら、ブラウザで https://github.com/shuhei0720org01/alz-mgmt を開いておく。
 
-- ファイル構造が見える
-- コードを検索できる
-- ファイルをクリックすれば開ける
+    - ファイル構造が見える
+    - コードを検索できる
+    - ファイルをクリックすれば開ける
 
-**パターン2: クローンしてVSCodeで見る**（本格的に学びたい人向け）
+=== "クローンしてVSCodeで見る（本格的に学びたい人向け）"
 
-```bash
-git clone https://github.com/shuhei0720org01/alz-mgmt.git
-cd alz-mgmt
-code .
-```
+    ```bash
+    git clone https://github.com/shuhei0720org01/alz-mgmt.git
+    cd alz-mgmt
+    code .
+    ```
 
-- ファイル間の移動が速い
-- 複数ファイルを同時に開ける
-- `terraform plan`で動作確認できる
+    - ファイル間の移動が速い
+    - 複数ファイルを同時に開ける
+    - `terraform plan`で動作確認できる
 
 ### 📖 読み方
 
@@ -38,12 +38,11 @@ code .
    - クローンした場合は、コメントを追加したり変更してみる
    - `terraform plan`で何が起きるか確認する（デプロイはしなくてもOK）
 
-### ⚠️ 注意
+!!! warning "デプロイ前の注意"
+    このリポジトリを実際にデプロイすると、Azureに課金が発生します。  
+    学習目的なら、**コードを読むだけでも十分効果があります**。
 
-このリポジトリを実際にデプロイすると、Azureに課金が発生します。  
-学習目的なら、**コードを読むだけでも十分効果があります**。
-
-デプロイしたい場合は、[13_デプロイ手順.md](./13_デプロイ手順.md)を必ず読んでから実行してください。
+    デプロイしたい場合は、[13_デプロイ手順.md](./13_デプロイ手順.md)を必ず読んでから実行してください。
 
 ---
 
@@ -72,7 +71,7 @@ Azure Landing Zonesも同じです。
 このコードを実行すると、Azureにこんな環境ができます：
 
 ### 1. 組織構造（管理グループ）
-```
+```text title="管理グループの階層構造"
 あなたの会社
 ├── プラットフォーム（基盤チーム）
 │   ├── ネットワーク担当
@@ -88,16 +87,18 @@ Azure Landing Zonesも同じです。
 
 ### 2. ネットワーク（2拠点構成）
 
-**東日本の拠点（メイン）**
-- Azure Firewall: インターネットとの出入り口を守る門番
-- Bastion: サーバーに安全にログインするための専用ゲート
-- VPN Gateway: 会社のオフィスと接続
-- Express Route Gateway: 専用線で接続（オプション）
-- Private DNS: 内部の名前解決
+=== "東日本の拠点（メイン）"
 
-**西日本の拠点（バックアップ）**
-- 東日本と同じ構成
-- 災害時の切り替え先
+    - Azure Firewall: インターネットとの出入り口を守る門番
+    - Bastion: サーバーに安全にログインするための専用ゲート
+    - VPN Gateway: 会社のオフィスと接続
+    - Express Route Gateway: 専用線で接続（オプション）
+    - Private DNS: 内部の名前解決
+
+=== "西日本の拠点（バックアップ）"
+
+    - 東日本と同じ構成
+    - 災害時の切り替え先
 
 ### 3. 監視・管理システム
 - Log Analytics: 全てのログを一箇所に集約
