docs: 00_はじめに.mdの残り部分にデザイン装飾を追加（コスト/賢いところ/ロードマップ/勘違い）

--- a/docs-site/docs/00_はじめに.md
+++ b/docs-site/docs/00_はじめに.md
@@ -248,85 +248,89 @@ alz-mgmt/
 - Log Analytics: データ量による（約¥10,000〜）
 - その他: 約¥5,000/月
 
-**合計: 約¥484,000〜/月**
+=== "2リージョン構成"
+    **合計: 約¥484,000〜/月**
 
-**1リージョンのみの場合：**
-- 約¥242,000/月（上記の半分）
+=== "1リージョン構成"
+    **約¥242,000/月**（2リージョンの半分）
 
-**コスト削減のヒント：**
-- VPN不要なら約¥80,000削減
-- Firewall Basicにすると約¥280,000削減（Standard → Basic）
-- 詳細は[Chapter 17のFAQ](./17_FAQ.md)を参照
-
-※ 実験用なら不要なリソース（Firewall等）を無効化すれば大幅にコスト削減可能
+!!! tip "コスト削減のヒント"
+    - VPN不要なら約¥80,000削減
+    - Firewall Basicにすると約¥280,000削減（Standard → Basic）
+    - 詳細は[Chapter 17のFAQ](./17_FAQ.md)を参照
+    
+    ※ 実験用なら不要なリソース（Firewall等）を無効化すれば大幅にコスト削減可能
 
 ## このプロジェクトの賢いところ
 
-### 1. テンプレート機能
-同じ設定を複数地域にコピペしなくていい。  
-`$${starter_location_01}`って書けば自動で`japaneast`に置換してくれる。
+!!! success "5つの賢い設計"
+    ### 1. テンプレート機能
+    同じ設定を複数地域にコピペしなくていい。  
+    `$${starter_location_01}`って書けば自動で`japaneast`に置換してくれる。
 
-### 2. モジュール化
-再利用可能な部品に分かれている。  
-他のプロジェクトでも使い回せる。
+    ### 2. モジュール化
+    再利用可能な部品に分かれている。  
+    他のプロジェクトでも使い回せる。
 
-### 3. Azure Verified Modules (AVM)を使用
-Microsoftが公式にメンテナンスしているモジュールを使ってる。  
-自分でイチから書くより安全で確実。
+    ### 3. Azure Verified Modules (AVM)を使用
+    Microsoftが公式にメンテナンスしているモジュールを使ってる。  
+    自分でイチから書くより安全で確実。
 
-### 4. ポリシーのYAML管理
-ポリシー定義をYAMLで管理。  
-Terraformコードより読みやすい。
+    ### 4. ポリシーのYAML管理
+    ポリシー定義をYAMLで管理。  
+    Terraformコードより読みやすい。
 
-### 5. GitHub Actionsで自動化
-手元でTerraform実行しなくていい。  
-GitHubにpushすれば自動でデプロイ。
+    ### 5. GitHub Actionsで自動化
+    手元でTerraform実行しなくていい。  
+    GitHubにpushすれば自動でデプロイ。
 
 ## 学習のロードマップ
 
-このプロジェクトを理解するための順序：
+!!! info "6ステップで理解する"
+    このプロジェクトを理解するための順序：
 
-### ステップ1: 全体像を掴む（今ここ）
-- このファイルを読む
-- 何ができるのか理解する
-- なぜ必要なのか理解する
+    ### ステップ1: 全体像を掴む（今ここ）
+    - このファイルを読む
+    - 何ができるのか理解する
+    - なぜ必要なのか理解する
 
-### ステップ2: 基礎を学ぶ
-- Terraformの基本
-- Azureの基本概念
-- Landing Zonesの設計思想
+    ### ステップ2: 基礎を学ぶ
+    - Terraformの基本
+    - Azureの基本概念
+    - Landing Zonesの設計思想
 
-### ステップ3: 設定ファイルを読む
-- `platform-landing-zone.auto.tfvars`を1行ずつ理解
-- どのパラメータが何を制御するか
+    ### ステップ3: 設定ファイルを読む
+    - `platform-landing-zone.auto.tfvars`を1行ずつ理解
+    - どのパラメータが何を制御するか
 
-### ステップ4: モジュールを理解する
-- 各モジュールの役割
-- どう連携しているか
+    ### ステップ4: モジュールを理解する
+    - 各モジュールの役割
+    - どう連携しているか
 
-### ステップ5: 実際に動かす
-- 自分の環境で実行
-- トラブルシューティング
+    ### ステップ5: 実際に動かす
+    - 自分の環境で実行
+    - トラブルシューティング
 
-### ステップ6: カスタマイズする
-- 自分の要件に合わせて改造
-- 新しい機能を追加
+    ### ステップ6: カスタマイズする
+    - 自分の要件に合わせて改造
+    - 新しい機能を追加
 
 ## よくある勘違い
 
-### 勘違い1: 「全部理解しないと使えない」
-→ **NO!** まずは設定ファイルだけ理解すれば使えます。  
-深く理解するのは後からでOK。
+!!! warning "これらは誤解です"
+    ### 勘違い1: 「全部理解しないと使えない」
+    → **NO!** まずは設定ファイルだけ理解すれば使えます。  
+    深く理解するのは後からでOK。
 
-### 勘違い2: 「Azureの専門家じゃないとダメ」
-→ **NO!** このコースで必要な知識は全部教えます。
+    ### 勘違い2: 「Azureの専門家じゃないとダメ」
+    → **NO!** このコースで必要な知識は全部教えます。
 
-### 勘違い3: 「一度作ったら変更できない」
-→ **NO!** Terraformなので、設定変えて再実行すれば更新されます。
+    ### 勘違い3: 「一度作ったら変更できない」
+    → **NO!** Terraformなので、設定変えて再実行すれば更新されます。
 
-### 勘違い4: 「本番環境で使っちゃダメ」
-→ **NO!** Microsoftが推奨する構成なので本番でも使えます。  
-ただし、最初は検証環境で試してね。
+    ### 勘違い4: 「本番環境で使っちゃダメ」
+    → **NO!** Microsoftが推奨する構成なので本番でも使えます。  
+    ただし、最初は検証環境で試してね。
 
 ---
 
