--- a/docs-site/docs/01_基礎知識.md
+++ b/docs-site/docs/01_基礎知識.md
@@ -1,15 +1,14 @@
 # 01. 基礎知識 - Terraform・Azure・Landing Zones入門
 
-## この章で学ぶこと
+!!! info "この章で学ぶこと"
+    このプロジェクトを理解するために必要な基礎知識を学びます：
 
-このプロジェクトを理解するために必要な基礎知識を学びます：
+    1. Terraformって何？
+    2. Azureの基本概念
+    3. Azure Landing Zonesの設計思想
+    4. Infrastructure as Codeの考え方
 
-1. Terraformって何？
-2. Azureの基本概念
-3. Azure Landing Zonesの設計思想
-4. Infrastructure as Codeの考え方
-
-すでに知ってる内容もあるかもしれませんが、復習のつもりでサラッと読んでください。
+    すでに知ってる内容もあるかもしれませんが、復習のつもりでサラッと読んでください。
 
 ---
 
@@ -17,34 +16,33 @@
 
 ### 「コードでインフラを作る」とは？
 
-昔、サーバーを立てるときはこうでした：
+=== "昔のやり方"
 
-```
-1. データセンターに行く
-2. ラックからサーバーを取り出す
-3. ケーブルを繋ぐ
-4. OSをインストール
-5. 設定ファイルを手で編集
-```
+    ```text title="オンプレミス時代"
+    1. データセンターに行く
+    2. ラックからサーバーを取り出す
+    3. ケーブルを繋ぐ
+    4. OSをインストール
+    5. 設定ファイルを手で編集
+    ```
 
-今はクラウド時代。画面ポチポチでサーバーが作れます：
+=== "今のやり方（クラウド）"
 
-```
-1. Azureポータルにログイン
-2. 「仮想マシン」をクリック
-3. フォームに入力（名前、サイズ、場所...）
-4. 「作成」ボタンをクリック
-```
+    ```text title="Azureポータルでの作成"
+    1. Azureポータルにログイン
+    2. 「仮想マシン」をクリック
+    3. フォームに入力（名前、サイズ、場所...）
+    4. 「作成」ボタンをクリック
+    ```
 
-でも、これって：
-
-- 間違えやすい（入力ミス）
-- 再現できない（どう作ったか忘れる）
-- 時間がかかる（10個作るなら10回やる）
+!!! warning "でも、これって問題がある"
+    - 間違えやすい（入力ミス）
+    - 再現できない（どう作ったか忘れる）
+    - 時間がかかる（10個作るなら10回やる）
 
 そこでTerraform。コードでインフラを定義します：
 
-```hcl
+```hcl title="Terraformでの定義"
 resource "azurerm_virtual_machine" "example" {
   name                = "my-vm"
   location            = "japaneast"
@@ -53,21 +51,20 @@ resource "azurerm_virtual_machine" "example" {
 }
 ```
 
-このコードを実行すると、VMが作られます。  
-コードなので：
+このコードを実行すると、VMが作られます。
 
-- バージョン管理できる（Git）
-- レビューできる
-- 再利用できる
-- 自動化できる
+!!! success "コードで管理するメリット"
+    - バージョン管理できる（Git）
+    - レビューできる
+    - 再利用できる
+    - 自動化できる
 
 ### Terraformの3つのステップ
 
 Terraformは3ステップで動きます：
 
 #### 1. Write（書く）
-```hcl
-# main.tf
+```hcl title="main.tf"
 resource "azurerm_resource_group" "example" {
   name     = "my-rg"
   location = "japaneast"
@@ -75,7 +72,7 @@ resource "azurerm_resource_group" "example" {
 ```
 
 #### 2. Plan（計画）
-```bash
+```bash title="実行前の確認"
 $ terraform plan
 # Terraform will perform the following actions:
 #   + azurerm_resource_group.example
@@ -86,7 +83,7 @@ $ terraform plan
 「これから何を作るか」を教えてくれます。
 
 #### 3. Apply（適用）
-```bash
+```bash title="実際に作成"
 $ terraform apply
 # 本当に実行してもいい？ (yes/no): yes
 # Creating...
@@ -100,7 +97,7 @@ $ terraform apply
 #### 差分管理
 Terraformは「現在の状態」を覚えています。
 
-```hcl
+```hcl title="設定の変更例"
 # 最初はこう書いた
 resource "azurerm_resource_group" "example" {
   name     = "my-rg"
@@ -122,7 +119,7 @@ resource "azurerm_resource_group" "example" {
 Terraformが賢く判断してくれます。
 
 #### 依存関係の解決
-```hcl
+```hcl title="依存関係の自動解決"
 resource "azurerm_resource_group" "rg" {
   name     = "my-rg"
   location = "japaneast"
@@ -144,7 +141,7 @@ Terraformが自動で順序を判断してくれます。
 TerraformはHCL（HashiCorp Configuration Language）で書きます。
 
 #### ブロック構造
-```hcl
+```hcl title="HCLの基本構造"
 <ブロックタイプ> "<ラベル>" "<名前>" {
   <引数> = <値>
 }
