docs: 01_基礎知識.mdに装飾追加（よくある失敗例/組織構造）文章変更なし

--- a/docs-site/docs/01_基礎知識.md
+++ b/docs-site/docs/01_基礎知識.md
@@ -344,13 +344,12 @@ Microsoftが定義した「企業向けAzure環境のベストプラクティス
 
 いきなりAzureでアプリを作り始めると、こんな問題が起きます：
 
-### ❌ よくある失敗例
-
-1. **リソースがバラバラ** → 「あのVMどのRGに入れたっけ？」
-2. **セキュリティが甘い** → 「Public IP全開で本番デプロイしちゃった…」
-3. **コストが見えない** → 「今月の請求、なんで500万円！？」
-4. **権限がめちゃくちゃ** → 「開発者が本番環境を削除できちゃう」
-5. **監視してない** → 「障害に3日気づかなかった」
+!!! warning "よくある失敗例"
+    1. **リソースがバラバラ** → 「あのVMどのRGに入れたっけ？」
+    2. **セキュリティが甘い** → 「Public IP全開で本番デプロイしちゃった…」
+    3. **コストが見えない** → 「今月の請求、なんで500万円！？」
+    4. **権限がめちゃくちゃ** → 「開発者が本番環境を削除できちゃう」
+    5. **監視してない** → 「障害に3日気づかなかった」
 
 Landing Zonesは、こういう問題を最初から防ぐ仕組みです。
 
@@ -390,7 +389,7 @@ Microsoftは8つの設計領域を定義しています。
 
 **具体的には：**
 
-```
+```text title="組織構造の例"
 組織構造の例：
 
 ABC株式会社
@@ -422,8 +421,7 @@ ABC株式会社
 
 **具体的には：**
 
-```
-役割の例：
+```text title="役割の例"
 
 【本番環境】
 - 閲覧のみ: 全社員
@@ -520,8 +518,7 @@ rg-{用途}-{環境}-{リージョン}
 
 **具体的には：**
 
-```
-Hub-Spoke構成の例：
+```text title="Hub-Spoke構成の例"
 
 Hub VNet（10.0.0.0/16）
 ├── Firewall Subnet（10.0.128.0/26）
@@ -570,8 +567,7 @@ Firewallで一元管理
 
 **具体的には：**
 
-```
-セキュリティの層（Defense in Depth）
+```text title="セキュリティの層（Defense in Depth）"
 
 【外側】
 1. DDoS Protection
