--- a/docs-site/docs/01_基礎知識.md
+++ b/docs-site/docs/01_基礎知識.md
@@ -617,7 +617,7 @@ Firewallで一元管理
 
 **具体的には：**
 
-```
+```text title="監視の基本"
 監視の基本：
 
 【ログ収集】
@@ -645,7 +645,7 @@ Log Analytics Workspace
 
 **よくある運用シナリオ：**
 
-```
+```text title="障害対応の流れ"
 障害発生！
 
 1. Log Analyticsで調査
@@ -670,7 +670,7 @@ Log Analytics Workspace
 
 **具体的には：**
 
-```
+```text title="ポリシーの例"
 ポリシーの例：
 
 【必須ポリシー】
@@ -696,7 +696,7 @@ Log Analytics Workspace
 
 **タグ戦略：**
 
-```
+```text title="タグ戦略"
 必須タグ:
 - environment: prod / dev / staging
 - cost-center: 部署コード
@@ -723,7 +723,7 @@ Log Analytics Workspace
 
 **具体的には：**
 
-```
+```text title="自動化の流れ"
 自動化の流れ：
 
 【開発フロー】
@@ -785,7 +785,7 @@ Azure Landing Zonesには、主に2つのネットワーク構成があります
 
 **図解：**
 
-```
+```text title="Hub-Spoke型の構造"
         Hub VNet（中央拠点）
         10.0.0.0/16
         ┌─────────────────┐
@@ -805,7 +805,7 @@ Azure Landing Zonesには、主に2つのネットワーク構成があります
 
 **通信の流れ：**
 
-```
+```text title="Hub-Spoke通信パターン"
 例1: インターネットからWebAppへのアクセス
 
 インターネット
@@ -842,7 +842,7 @@ Spoke2（API）
 
 **図解：**
 
-```
+```text title="Virtual WAN型の構造"
          Virtual WAN（グローバル）
               │
     ┌─────────┼─────────┐
@@ -857,7 +857,7 @@ Spoke Spoke Spoke Spoke Spoke Spoke
 
 **通信の流れ：**
 
-```
+```text title="Virtual WAN通信パターン"
 例: 東日本のアプリから米国のDBにアクセス
 
 東日本のSpoke
@@ -888,7 +888,7 @@ vHub3（米国）
 
 #### このプロジェクトでは両方使える！
 
-```hcl
+```hcl title="構成切り替え"
 # Hub-Spoke型を使う場合
 connectivity_type = "hub_and_spoke_vnet"
 
@@ -900,7 +900,7 @@ connectivity_type = "virtual_wan"
 
 #### どっちを選べばいい？
 
-```
+```text title="選択肢の決定木"
 質問に答えてください：
 
 Q1: 海外にも展開する予定がある？
@@ -940,7 +940,7 @@ Q3: 予算は潤沢にある？
 ### なぜコードで書くのか？
 
 #### 従来の問題点
-```
+```text title="手順書の問題"
 手順書: サーバー構築手順.docx
 
 1. ポータルにログイン
@@ -960,7 +960,7 @@ Q3: 予算は潤沢にある？
 #### IaCのメリット
 
 **1. 再現性**
-```hcl
+```hcl title="再現性の例"
 resource "azurerm_resource_group" "prod" {
   name     = "rg-prod"
   location = "japaneast"
@@ -970,7 +970,7 @@ resource "azurerm_resource_group" "prod" {
 何度実行しても同じ結果。
 
 **2. バージョン管理**
-```bash
+```bash title="Git履歴"
 git log
 # commit 3: Firewallを追加
 # commit 2: VNetのサイズを変更
@@ -980,7 +980,7 @@ git log
 いつ誰が何を変更したかわかる。
 
 **3. レビュー**
-```bash
+```bash title="差分確認"
 git diff
 # + resource "azurerm_firewall" "fw" {
 # +   name = "fw-prod"
@@ -990,7 +990,7 @@ git diff
 変更内容を誰かにチェックしてもらえる。
 
 **4. 自動化**
-```yaml
+```yaml title="GitHub Actions"
 # GitHub Actions
 on: push
 jobs:
