docs: 09_管理リソース.md装飾完了 文章変更なし

--- a/docs-site/docs/09_管理リソース.md
+++ b/docs-site/docs/09_管理リソース.md
@@ -37,7 +37,7 @@
 ### なんで必要なの？
 
 **シナリオ1：セキュリティ監視**
-```
+```text title="セキュリティ監視のフロー"
 VM作成
   ↓
 Defender for Cloudが「このVMにエージェント入れて」
@@ -48,14 +48,14 @@ Defender for Cloudが「このVMにエージェント入れて」
 ```
 
 **シナリオ2：コンプライアンス**
-```
+```text title="コンプライアンス要件の実現"
 ポリシー：「全VMはログをLog Analyticsに送信」
   ↓
 でもワークスペースがない ← 作っとかないとダメ
 ```
 
 **シナリオ3：トラブルシューティング**
-```
+```text title="トラブルシューティングの流れ"
 VMが遅い
   ↓
 ログを見たい
@@ -73,7 +73,7 @@ Log Analyticsでクエリ実行
 
 Chapter 3で見たこれ：
 
-```hcl
+```hcl title="管理リソース設定（テンプレート変数使用）"
 management_resource_settings = {
   enabled                      = true
   location                     = "$${starter_location_01}"
@@ -101,7 +101,7 @@ management_resource_settings = {
 ```
 
 **テンプレート処理後**：
-```hcl
+```hcl title="管理リソース設定（実際の値）"
 management_resource_settings = {
   enabled                      = true
   location                     = "japaneast"
@@ -131,7 +131,7 @@ management_resource_settings = {
 ### フィールド解説
 
 #### enabled
-```hcl
+```hcl title="管理リソースの有効/無効"
 enabled = true
 ```
 
@@ -141,7 +141,7 @@ enabled = true
 - `false`：作らない（既存使う）
 
 #### location
-```hcl
+```hcl title="リソースの配置場所"
 location = "japaneast"
 ```
 
@@ -150,7 +150,7 @@ location = "japaneast"
 Log Analyticsワークスペースの場所。
 
 #### log_analytics_workspace_name
-```hcl
+```hcl title="Log Analyticsワークスペース名"
 log_analytics_workspace_name = "law-management-japaneast"
 ```
 
@@ -163,7 +163,7 @@ log_analytics_workspace_name = "law-management-japaneast"
 - `japaneast`：場所
 
 #### resource_group_name
-```hcl
+```hcl title="リソースグループ名"
 resource_group_name = "rg-management"
 ```
 
@@ -176,7 +176,7 @@ resource_group_name = "rg-management"
 - Managed Identity
 
 #### user_assigned_managed_identities
-```hcl
+```hcl title="ユーザー割り当てManaged Identity"
 user_assigned_managed_identities = {
   ama = {
     name = "id-ama-japaneast"
@@ -190,7 +190,7 @@ user_assigned_managed_identities = {
 VMにインストールするエージェント。ログとかメトリクスを収集してLog Analyticsに送る。
 
 **Managed Identityの役割**：
-```
+```text title="AMAの認証フロー"
 VM
   ↓ AMAインストール
 VM（AMA付き）
@@ -203,7 +203,7 @@ Log Analytics Workspace
 パスワード不要で認証できるのが便利。
 
 #### data_collection_rules
-```hcl
+```hcl title="データ収集ルール（DCR）の定義"
 data_collection_rules = {
   change_tracking = { name = "dcr-change-tracking" }
   defender_sql    = { name = "dcr-defender-sql" }
@@ -216,7 +216,7 @@ data_collection_rules = {
 **3種類のDCR**：
 
 ##### 1. change_tracking
-```
+```text title="変更追跡の対象"
 「ファイルやレジストリの変更を追跡」
 ```
 
@@ -229,7 +229,7 @@ data_collection_rules = {
 - 不審なプログラムインストールされた？
 
 ##### 2. defender_sql
-```
+```text title="SQL Serverのセキュリティ監視"
 「SQL Serverのセキュリティログ収集」
 ```
 
@@ -240,7 +240,7 @@ data_collection_rules = {
 - コンプライアンス監査
 
 ##### 3. vm_insights
-```
+```text title="VMのパフォーマンス監視"
 「VMのパフォーマンスとヘルス監視」
 ```
 
@@ -257,7 +257,7 @@ data_collection_rules = {
 
 ### management_resources モジュール
 
-```hcl
+```hcl title="管理リソースモジュールの呼び出し"
 module "management_resources" {
   source = "./modules/management_resources"
 
@@ -273,7 +273,7 @@ module "management_resources" {
 ```
 
 #### count
-```hcl
+```hcl title="有効/無効の制御"
 count = var.management_resources_enabled ? 1 : 0
 ```
 
@@ -287,7 +287,7 @@ management_resources_enabled = false  # ←管理リソース作らない
 ```
 
 #### providers
-```hcl
+```hcl title="Managementサブスクリプション指定"
 providers = {
   azurerm = azurerm.management
 }
@@ -298,7 +298,7 @@ Managementサブスクリプションにリソース作成。
 
 ### modules/management_resources/main.tf
 
-```hcl
+```hcl title="ALZ管理リソース公式モジュール"
 module "management_resources" {
   source  = "Azure/avm-ptn-alz-management/azurerm"
   version = "0.9.0"
@@ -319,7 +319,7 @@ module "management_resources" {
 Azure公式モジュールを使ってる。
 
 #### coalesce
-```hcl
+```hcl title="デフォルト値のフォールバック"
 log_analytics_workspace_name = coalesce(
   var.management_resource_settings.log_analytics_workspace_name,
   "law-management-${var.management_resource_settings.location}"
@@ -331,7 +331,7 @@ log_analytics_workspace_name = coalesce(
 - 指定されてなければデフォルト名を使う
 
 **例**：
-```hcl
+```hcl title="coalesceの動作例"
 # 指定あり
 log_analytics_workspace_name = "my-custom-law"
 # ↓
@@ -344,14 +344,14 @@ log_analytics_workspace_name = null
 ```
 
 #### resource_group_creation_enabled
-```hcl
+```hcl title="リソースグループ自動作成"
 resource_group_creation_enabled = true
 ```
 
 **何してる？**
 リソースグループも自動で作る。
 
-```
+```text title="リソース作成の順序"
 モジュール実行
   ↓
 1. rg-management作成
@@ -364,7 +364,7 @@ resource_group_creation_enabled = true
 ```
 
 #### linked_automation_account_creation_enabled
-```hcl
+```hcl title="Automation Accountの作成制御"
 linked_automation_account_creation_enabled = false
 ```
 
@@ -394,7 +394,7 @@ VMの自動パッチ適用とか自動化タスク用。
 ```
 
 **2. クエリ実行**
-```kql
+```kql title="エラーログの検索クエリ"
 // 過去24時間のエラーログ
 AzureDiagnostics
 | where TimeGenerated > ago(24h)
@@ -413,7 +413,7 @@ KQL（Kusto Query Language）でクエリ書ける。めっちゃ強力。
 #### 設定項目
 
 ##### retention_in_days
-```hcl
+```hcl title="ログ保持期間の設定"
 log_analytics_workspace_retention_in_days = 30
 ```
 
@@ -432,7 +432,7 @@ retention_in_days = 365  # 1年保管
 ```
 
 ##### daily_quota_gb
-```hcl
+```hcl title="1日のログ取り込み上限"
 log_analytics_workspace_daily_quota_gb = 10
 ```
 
@@ -449,7 +449,7 @@ log_analytics_workspace_daily_quota_gb = 10
 クォータに達するとログが取り込まれないから、重要なログが欠損する可能性あり。
 
 ##### sku
-```hcl
+```hcl title="料金プランの設定"
 log_analytics_workspace_sku = "PerGB2018"
 ```
 
@@ -477,7 +477,7 @@ CapacityReservation：100GB/日から（割引率あり）
 
 #### change_tracking DCR
 
-```
+```text title="変更追跡DCRの収集対象"
 収集するデータ：
 
 - ファイルの変更
@@ -487,7 +487,7 @@ CapacityReservation：100GB/日から（割引率あり）
 ```
 
 **使用例**：
-```kql
+```kql title="ファイル変更の検索"
 // 過去24時間に変更されたファイル
 ConfigurationChange
 | where TimeGenerated > ago(24h)
@@ -497,7 +497,7 @@ ConfigurationChange
 
 #### defender_sql DCR
 
-```
+```text title="Defender for SQL DCRの収集対象"
 収集するデータ：
 
 - SQL Serverのセキュリティイベント
@@ -506,7 +506,7 @@ ConfigurationChange
 ```
 
 **使用例**：
-```kql
+```kql title="SQLの不審アクセス検知"
 // SQLの不審なアクセス
 SecurityAlert
 | where TimeGenerated > ago(24h)
@@ -516,7 +516,7 @@ SecurityAlert
 
 #### vm_insights DCR
 
-```
+```text title="VM Insights DCRの収集対象"
 収集するデータ：
 
 - パフォーマンスカウンター（CPU、メモリ、ディスク、ネットワーク）
@@ -525,7 +525,7 @@ SecurityAlert
 ```
 
 **使用例**：
-```kql
+```kql title="CPU使用率が高いVMの検出"
 // CPU使用率が高いVM
 Perf
 | where TimeGenerated > ago(1h)
@@ -541,7 +541,7 @@ Perf
 **パスワード不要の認証**
 
 **従来の方法**：
-```
+```text title="パスワード認証の問題点"
 VMにエージェントインストール
   ↓
 設定ファイルに書く：
@@ -556,7 +556,7 @@ VMにエージェントインストール
 ```
 
 **Managed Identityの方法**：
-```
+```text title="Managed Identityでの認証フロー"
 VMにManaged Identity割り当て
   ↓
 エージェントはManaged Identityで認証
@@ -585,7 +585,7 @@ VMを削除してもManaged Identityは残る
 
 #### 使われ方
 
-```
+```text title="Managed Identityの使用フロー"
 1. Managed Identity作成
    id-ama-japaneast
 
@@ -608,7 +608,7 @@ VMを削除してもManaged Identityは残る
 
 Chapter 8で見たこれ：
 
-```hcl
+```hcl title="ポリシーのデフォルト値設定"
 policy_default_values = {
   ama_change_tracking_data_collection_rule_id = "$${ama_change_tracking_data_collection_rule_id}"
   ama_user_assigned_managed_identity_id       = "$${ama_user_assigned_managed_identity_id}"
@@ -623,7 +623,7 @@ policy_default_values = {
 
 **シナリオ：VMにAMAをデプロイするポリシー**
 
-```
+```text title="ポリシーによる自動デプロイフロー"
 1. ポリシー「VMを作ったらAMAインストール」が発動
 
 2. ポリシーがManaged IdentityのIDを取得
@@ -645,7 +645,7 @@ policy_default_values = {
 
 ### 例1: 保持期間の変更
 
-```hcl
+```hcl title="ログ保持期間のカスタマイズ"
 # platform-landing-zone.auto.tfvars
 management_resource_settings = {
   ...
@@ -661,7 +661,7 @@ management_resource_settings = {
 
 ### 例2: 複数のManaged Identity
 
-```hcl
+```hcl title="複数のManaged Identityの定義"
 user_assigned_managed_identities = {
   ama = {
     name = "id-ama-japaneast"
@@ -683,7 +683,7 @@ user_assigned_managed_identities = {
 
 ### 例3: カスタムDCR
 
-```hcl
+```hcl title="カスタムDCRの追加"
 data_collection_rules = {
   change_tracking = {
     name = "dcr-change-tracking"
@@ -701,7 +701,7 @@ data_collection_rules = {
 
 ### Log Analyticsの確認
 
-```bash
+```bash title="Log Analytics Workspaceの確認コマンド"
 # ワークスペース一覧
 az monitor log-analytics workspace list --output table
 
@@ -722,7 +722,7 @@ Logs → KQLクエリ実行
 
 ### DCRの確認
 
-```bash
+```bash title="Data Collection Ruleの確認コマンド"
 # DCR一覧
 az monitor data-collection rule list --output table
 
@@ -734,7 +734,7 @@ az monitor data-collection rule show \
 
 ### Managed Identityの確認
 
-```bash
+```bash title="Managed Identityの確認コマンド"
 # Managed Identity一覧
 az identity list --output table
 
@@ -746,7 +746,7 @@ az identity show \
 
 ### ログの確認
 
-```kql
+```kql title="Log Analyticsでのログ確認クエリ"
 // Heartbeat（VM生存確認）
 Heartbeat
 | where TimeGenerated > ago(1h)
@@ -797,7 +797,7 @@ Warning: Daily cap of 10 GB reached
 **原因**：1日のログ取り込み量がクォータに達した
 
 **対処法**：
-```hcl
+```hcl title="クォータ引き上げまたはログ削減"
 # クォータ引き上げ
 log_analytics_workspace_daily_quota_gb = 50
 
@@ -813,7 +813,7 @@ Error: Managed Identity does not have permission to write to Log Analytics
 **原因**：Managed Identityに権限が付与されてない
 
 **対処法**：
-```bash
+```bash title="権限の付与"
 # Log Analytics Contributor権限付与
 az role assignment create \
   --assignee <managed-identity-principal-id> \
